@startuml
skinparam classAttributeIconSize 0
class SmartLaunchResolver {}
Authenticator <|.. SmartLaunchResolver
class AudienceValidatorFactory {}
AuthenticatorFactory <|.. AudienceValidatorFactory
class StandaloneLaunchSelector {}
Authenticator <|.. StandaloneLaunchSelector
class AudienceValidator {}
Authenticator <|.. AudienceValidator
class EhrLaunchConditional {}
ConditionalAuthenticator <|.. EhrLaunchConditional
class EhrLaunchConditionalFactory {}
ConditionalAuthenticatorFactory <|.. EhrLaunchConditionalFactory
class LaunchDetector {}
Authenticator <|.. LaunchDetector
class LaunchHelper {}
class LaunchDetectorFactory {}
AuthenticatorFactory <|.. LaunchDetectorFactory
class SmartLaunchResolverFactory {}
AuthenticatorFactory <|.. SmartLaunchResolverFactory
class StandaloneLaunchSelectorFactory {}
AuthenticatorFactory <|.. StandaloneLaunchSelectorFactory
@enduml